[tool.poetry]
name = "gaiagate"
version = "0.1.0"
description = ""
authors = ["Labrys"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.13"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "5.3.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
